<resources>
    <string name="app_name">Exploratu</string>
    <string name="bottom_sheet_title">Modes</string>
    <string name="bottom_sheet_subtitle">Choose your converter</string>
    <string name="mode_title_currency">Currency</string>
    <string name="mode_title_more">More to come!</string>
    <string name="menu_settings">Settings</string>

    <!-- Currencies Home-->
    <string name="headline_currencies">Currencies</string>
    <string name="exchanges_provided_by_at">Rates updated at %1$s</string>
    <string name="flag_of_the_first_currency">Flag of the first currency</string>
    <string name="flag_of_the_second_currency">Flag of the second currency</string>
    <string name="flag_of_the_third_currency">Flag of the third currency</string>
    <string name="currency_desc">%1$s - %2$s</string>
    <string name="tt_currency_1">Select First Currency</string>
    <string name="tt_currency_2">Select Second Currency</string>
    <string name="tt_currency_3">Select Third Currency</string>
    <string name="tt_currency_active">Make Currency Active</string>
    <string name="tt_ar_fab">Start AR Mode</string>

    <!-- Select Currency -->
    <string name="select_currency">Select Currency</string>
    <string name="currency_query_hint">JPY, Yen, ¥, Japan…</string>

    <!--  AR MODE  -->
    <string name="tt_go_to_list">Manual Conversion</string>
    <string name="tt_flash_toggle">Toggle Flashlight</string>
    <string name="tt_locate_from_currency">Locate Origin Currency</string>
    <string name="tt_reverse_currencies">Reverse Currencies</string>
    <string name="tt_currency_from">Select Origin Currency</string>
    <string name="tt_currency_to">Select Your Currency</string>
    <string name="tt_camera_fab">Pause/Resume Preview</string>
    <string name="ar_warning_title">AR Mode</string>
    <string name="ar_warning_message">Be aware of your surroundings and remember to be properly supervised if required.</string>
    <string name="ar_warning_hide_next_time">I understand</string>
    <string name="ar_warning_dismiss">Remind me next time</string>

    <!-- Default ORC -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
</resources>
