<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tool="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".currencies.CurrencyFragment"
        android:background="@color/color_pad_bg"
        android:orientation="vertical">

<TextView
        android:id="@+id/currency_header"
        style="@style/ModeHeader"
        android:text="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<LinearLayout
        android:id="@+id/ll_currency_1"
        style="@style/CurrencyInfo"
        app:layout_constraintBottom_toTopOf="@+id/ll_currency_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/currency_header">

    <ImageView
            android:id="@+id/iv_currency_1_flag"
            style="@style/CurrencyFlag"
            android:contentDescription="@string/flag_of_the_first_currency" />

    <TextView
            android:id="@+id/tv_currency_1_code"
            style="@style/CurrencyCode"
            app:layout_constraintBottom_toBottomOf="@id/iv_currency_1_flag"
            app:layout_constraintStart_toEndOf="@id/iv_currency_1_flag"
            app:layout_constraintTop_toTopOf="@id/iv_currency_1_flag"
            tool:text="USD" />

    <ImageView
            android:id="@+id/iv_currency_1_arrow"
            style="@style/CurrencyArrow"
            app:layout_constraintBottom_toBottomOf="@id/tv_currency_1_code"
            app:layout_constraintStart_toEndOf="@id/tv_currency_1_code"
            app:layout_constraintTop_toTopOf="@id/tv_currency_1_code"
            android:contentDescription="@string/tt_currency_1" />
</LinearLayout>

<TextView
        android:id="@+id/tv_currency_1_quantity"
        style="@style/CurrencyAmount"
        app:autoSizeMaxTextSize="28sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/tv_currency_1_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_currency_1"
        app:layout_constraintTop_toTopOf="@id/ll_currency_1"
        tool:text="500" />

<TextView
        android:id="@+id/tv_currency_1_desc"
        style="@style/CurrencyDesc"
        app:layout_constraintBottom_toBottomOf="@id/ll_currency_1"
        app:layout_constraintEnd_toEndOf="@id/tv_currency_1_quantity"
        app:layout_constraintTop_toBottomOf="@id/tv_currency_1_quantity"
        tool:text="US Dollar - $" />

<LinearLayout
        android:id="@+id/ll_currency_2"
        style="@style/CurrencyInfo"
        app:layout_constraintBottom_toTopOf="@+id/ll_currency_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_currency_1">

    <ImageView
            android:id="@+id/iv_currency_2_flag"
            style="@style/CurrencyFlag"
            android:contentDescription="@string/flag_of_the_second_currency" />

    <TextView
            android:id="@+id/tv_currency_2_code"
            style="@style/CurrencyCode"
            app:layout_constraintBottom_toBottomOf="@id/iv_currency_2_flag"
            app:layout_constraintStart_toEndOf="@id/iv_currency_2_flag"
            app:layout_constraintTop_toTopOf="@id/iv_currency_2_flag"
            tool:text="EUR" />

    <ImageView
            android:id="@+id/iv_currency_2_arrow"
            style="@style/CurrencyArrow"
            app:layout_constraintBottom_toBottomOf="@id/tv_currency_2_code"
            app:layout_constraintStart_toEndOf="@id/tv_currency_2_code"
            app:layout_constraintTop_toTopOf="@id/tv_currency_2_code"
            android:contentDescription="@string/tt_currency_2" />
</LinearLayout>

<TextView
        android:id="@+id/tv_currency_2_quantity"
        style="@style/CurrencyAmount"
        app:autoSizeMaxTextSize="28sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tv_currency_2_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_currency_2"
        app:layout_constraintTop_toTopOf="@id/ll_currency_2"
        tool:text="445.39" />

<TextView
        android:id="@+id/tv_currency_2_desc"
        style="@style/CurrencyDesc"
        app:layout_constraintBottom_toBottomOf="@id/ll_currency_2"
        app:layout_constraintEnd_toEndOf="@id/tv_currency_2_quantity"
        app:layout_constraintTop_toBottomOf="@id/tv_currency_2_quantity"
        tool:text="Euro - €" />

<LinearLayout
        android:id="@+id/ll_currency_3"
        style="@style/CurrencyInfo"
        app:layout_constraintBottom_toTopOf="@+id/tv_exchange_provider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_currency_2">

    <ImageView
            android:id="@+id/iv_currency_3_flag"
            style="@style/CurrencyFlag"
            android:contentDescription="@string/flag_of_the_second_currency"
            app:layout_constraintBottom_toTopOf="@+id/tv_exchange_provider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_currency_2" />

    <TextView
            android:id="@+id/tv_currency_3_code"
            style="@style/CurrencyCode"
            app:layout_constraintBottom_toBottomOf="@id/iv_currency_3_flag"
            app:layout_constraintStart_toEndOf="@id/iv_currency_3_flag"
            app:layout_constraintTop_toTopOf="@id/iv_currency_3_flag"
            tool:text="JPY" />

    <ImageView
            android:id="@+id/iv_currency_3_arrow"
            style="@style/CurrencyArrow"
            app:layout_constraintBottom_toBottomOf="@id/tv_currency_3_code"
            app:layout_constraintStart_toEndOf="@id/tv_currency_3_code"
            app:layout_constraintTop_toTopOf="@id/tv_currency_3_code"
            android:contentDescription="@string/tt_currency_3" />
</LinearLayout>


<TextView
        android:id="@+id/tv_currency_3_quantity"
        style="@style/CurrencyAmount"
        app:autoSizeMaxTextSize="28sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@id/tv_currency_3_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ll_currency_3"
        app:layout_constraintTop_toTopOf="@id/ll_currency_3"
        tool:text="54,235" />

<TextView
        android:id="@+id/tv_currency_3_desc"
        style="@style/CurrencyDesc"
        app:layout_constraintBottom_toBottomOf="@id/ll_currency_3"
        app:layout_constraintEnd_toEndOf="@id/tv_currency_3_quantity"
        app:layout_constraintTop_toBottomOf="@id/tv_currency_3_quantity"
        tool:text="Yen - ¥/円" />

<!-- Pad and filler -->
<TextView
        android:id="@+id/tv_exchange_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.38"
        android:fontFamily="monospace"
        android:paddingBottom="2dp"
        android:text="@string/exchanges_provided_by_at"
        android:textSize="@dimen/label"
        app:layout_constraintBottom_toTopOf="@+id/navigation_divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<View
        android:id="@+id/navigation_divider"
        style="@style/Divider"
        android:alpha="0.05"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

<GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?attr/actionBarSize"
        android:background="@color/color_pad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_7"
            style="@style/PadButton"
            android:layout_row="0"
            android:layout_column="0"
            android:text="7"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_8"
            style="@style/PadButton"
            android:layout_row="0"
            android:layout_column="1"
            android:text="8"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_9"
            style="@style/PadButton"
            android:layout_row="0"
            android:layout_column="2"
            android:text="9"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_4"
            style="@style/PadButton"
            android:layout_row="1"
            android:layout_column="0"
            android:text="4"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_5"
            style="@style/PadButton"
            android:layout_row="1"
            android:layout_column="1"
            android:text="5"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_6"
            style="@style/PadButton"
            android:layout_row="1"
            android:layout_column="2"
            android:text="6"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_1"
            style="@style/PadButton"
            android:layout_row="2"
            android:layout_column="0"
            android:text="1"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_2"
            style="@style/PadButton"
            android:layout_row="2"
            android:layout_column="1"
            android:text="2"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_3"
            style="@style/PadButton"
            android:layout_row="2"
            android:layout_column="2"
            android:text="3"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_comma"
            style="@style/PadButton"
            android:layout_row="3"
            android:layout_column="0"
            android:text="."
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_0"
            style="@style/PadButton"
            android:layout_row="3"
            android:layout_column="1"
            android:text="0"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_00"
            style="@style/PadButton"
            android:layout_column="2"
            android:background="#00E00D0D"
            android:text="00"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_ac"
            style="@style/PadButton"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="3"
            android:text="AC"
            app:rippleColor="@color/color_secondary" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_pad_backspace"
            style="@style/PadButton"
            android:layout_row="2"
            android:layout_rowSpan="2"
            android:layout_column="3"
            app:icon="@drawable/ic_twotone_backspace"
            app:iconGravity="textStart"
            app:iconTint="@color/color_on_surface"
            app:rippleColor="@color/color_secondary" />
</GridLayout>

<View
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/color_pad"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>